[UPDATE] Routes, Docs, and Improvements
-Fixing some controller and Router to serve as it should be and easy to use
-Update api documentation
