# routes/reviews.js
@@ -1,6 +1,6 @@
 import express from 'express'
 
-import { createPost, getPostById, updatePost, likePost, dislikePost, softDeletePost, getActivePosts } from '../controllers/posts.js'
+import { createPost, getPostById, updatePost, likePost, dislikePost, softDeletePost, getActivePosts, getPostsByUserId } from '../controllers/posts.js'
 
 const router = express.Router();
 
@@ -11,5 +11,6 @@ router.put('/:postId', updatePost);
 router.patch('/:postId/like', likePost);
 router.patch('/:postId/dislike', dislikePost);
 router.delete('/:postId', softDeletePost);
+router.get('/history/:userId', getPostsByUserId);
 
 export default router;
