# routes/subjects.js
@@ -1,18 +1,19 @@
 import express from 'express'
 
-import { getAllSubjects, addSubject, viewSubject, updateSubject} from '../controllers/subjects.js'
-
-import { getPostBySubject } from '../controllers/posts.js';
+import { getAllSubjects, addSubject, viewSubject, updateSubject, getSubjectAllInfoAndPosts} from '../controllers/subjects.js'
 
 const router = express.Router();
 
 // Old Routing
 // router.get('/', getSubjects);
-// router.post('/add', addSubject);
+// router.post('/', addSubject);
 // router.get('/:subject', viewSubject);
 // router.put('/:subject', updateSubject);
 
 router.get('/', getAllSubjects);
-router.get('/:subject', getPostBySubject);
+router.post('/', addSubject);
+router.get('/:subject', getSubjectAllInfoAndPosts);
+router.put('/:subject', updateSubject);
+
 
 export default router;
