# swagger.yaml
@@ -12,6 +12,8 @@ tags:
   description: "Access to mod-checkup subjects"
 - name: "users"
   description: "Operations about user"
+- name: "auth"
+  description: "About logging into the site"
 schemes:
 - "http"
 - "https"
@@ -39,15 +41,11 @@ paths:
           description: "The created object will be returned"
         "405":
           description: "Invalid input"
-      security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
     get:
       tags:
       - "reviews"
-      summary: "Get all reviews"
-      operationId: "getAllPosts"
+      summary: "Get all active reviews"
+      operationId: "getActivePosts"
       consumes:
       - "application/json"
       produces:
@@ -106,9 +104,8 @@ paths:
         "404":
           description: "Post not found"
       security:
-      - petstore_auth:
-        - "write:pets"
-        - "read:pets"
+      - google_oauth2:
+        - "write"
     delete:
       tags:
       - "reviews"
@@ -171,7 +168,49 @@ paths:
           description: "The updated object will be returned"
         "404":
           description: "Post not found"
+  /reviews/history/{userId}:
+    get:
+      tags:
+      - "reviews"
+      summary: "Find all post by user"
+      operationId: "getPostsByUserId"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "userId"
+        in: "path"
+        type: "string"
+        description: "User Id to search"
+        required: true
+      responses:
+        "200":
+          description: "All of that user's posts will be returned"
+        "404":
+          description: "Not found"
   /subjects:
+    post:
+      tags:
+      - "subjects"
+      summary: "Add a new subject"
+      operationId: "addSubject"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "body"
+        in: "body"
+        description: "Subject that you want to create"
+        required: true
+        schema:
+          $ref: "#/definitions/Subject"
+      responses:
+        "200":
+          description: "Created subject will be returned"
+        "404":
+          description: "Not Found"
     get:
       tags:
       - "subjects"
@@ -190,8 +229,8 @@ paths:
     get:
       tags:
       - "subjects"
-      summary: "Get all reviews by subject"
-      operationId: "getPostBySubject"
+      summary: "Get subject info and all reviews by subject"
+      operationId: "getSubjectAllInfoAndPosts"
       consumes:
       - "application/json"
       produces:
@@ -204,21 +243,98 @@ paths:
         required: true
       responses:
         "200":
-          description: "Specified subject's reviews will be returned"
+          description: "Specified subject's infos and reviews will be returned"
         "404":
           description: "Not Found"
+    put:
+      tags:
+      - "subjects"
+      summary: "Update subject info"
+      operationId: "updateSubject"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "subjectAbbr"
+        in: "path"
+        type: "string"
+        description: "Subject Abbreviation (Ex. OOP122)"
+        required: true
+      - name: "body"
+        in: "body"
+        description: "Subject that you want to update"
+        required: true
+        schema:
+          $ref: "#/definitions/Subject"
+      responses:
+        "200":
+          description: "Updated subject"
+        "404":
+          description: "Not Found"
+  /users:
+    get:
+      tags:
+      - "users"
+      summary: "Get all users"
+      operationId: "getAllUsers"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "All users will be returned"
+        "404":
+          description: "Not Found"
+  /users/{userId}:
+    get:
+      tags:
+      - "users"
+      summary: "Get specified user info"
+      operationId: "findUserById"
+      consumes:
+      - "application/json"
+      produces:
+      - "application/json"
+      parameters:
+      - name: "userId"
+        in: "path"
+        type: "string"
+        required: true
+      responses:
+        "200":
+          description: "Specified user's info will be returned"
+        "404":
+          description: "Not Found"
+  /auth/google:
+    get:
+      tags:
+      - "auth"
+      summary: "Google Authentication"
+      description: "If success will be redirected to 'FrontendURL'/auth/success , if failure will be redirected to 'FrontendURL'/auth/failure ."
+      operationId: ""
+      responses:
+        "200":
+          description: "OK"
+  /auth/logout:
+    get:
+      tags:
+      - "auth"
+      summary: "Logout then redirect to frontend"
+      description: ""
+      responses:
+        "200":
+          description: "OK"
 securityDefinitions:
-  petstore_auth:
+  google_oauth2:
     type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
+    authorizationUrl: "http://localhost:5000/api/auth/google"
     flow: "implicit"
     scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
+      read: "Grants read access"
+      write: "Grants write access"
+      admin: "Grants read and write access to administrative information"
 definitions:
   Post:
     type: "object"
@@ -309,9 +425,21 @@ definitions:
   User:
     type: "object"
     properties:
-      google_id:
+      googleId:
         type: "string"
         description: "Google ID from KMUTT account"
+      displayName:
+        type: "string"
+        description: "Display name from google"
+      firstName:
+        type: "string"
+      lastName:
+        type: "string"
+      image:
+        type: "string"
+        description: "Image URL from google"
+      email:
+        type: "string"
       owner_role:
         type: "string"
         description: "Account Role"
@@ -336,13 +464,3 @@ definitions:
         default: 0
         type: "integer"
         description: "In case of using the old data"
-  ApiResponse:
-    type: "object"
-    properties:
-      code:
-        type: "integer"
-        format: "int32"
-      type:
-        type: "string"
-      message:
-        type: "string"
